languages/montiarcautomaton-fe/src/test/resources/invalid/AutomatonWithoutState.maa
package invalid;

component AutomatonWithoutState {

  automaton AutomatonWithoutState {
  }
}
